# header-hook

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/code/: modules.doctree
.doctrees/overview/: compact-overview.doctree  dependencies.doctree  further-reading.doctree  project-organisation.doctree  quickstart.doctree
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bump-version.yml  docker-image.yml  gh-pages.yml  test-project-structure.yml
_sources/: index.rst.txt
_sources/code/: modules.rst.txt
_sources/overview/: dependencies.rst.txt  further-reading.rst.txt  quickstart.rst.txt
code/: modules.html
data/tests/integration/header_hook/expected/: word_wrap_test.py
data/tests/integration/header_hook/input/: word_wrap_test.py
docs/source/: conf.py
docs/source/overview/: compact-overview.rst  project-organisation.rst
overview/: compact-overview.html  dependencies.html  further-reading.html  project-organisation.html  quickstart.html
src/header_hook/: header_hook.py
tests/end_to_end/: conftest.py  word_wrap_test.py
tests/fixtures/: fixtures_end_to_end.py
tests/helpers/: helpers_end_to_end.py
tests/unit/: project_structure_test.py
utils/: bump-my-version_config_setter.sh  bump_config_cleaner.py  pyproject_mod.py
