[project]
name = "header-hook"
description = "Pre-commit hook for tidying up metadata header blocks within script files "
version = "0.1.0"
authors = [{ name = "Richard Parker", email = "richardgarryparker@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<4"


[project.urls]
repository = "https://github.com/"
documentation = "https://abc.github.io/"


[tool.poetry]
package-mode = true


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
black = { version = ">=25.1.0" }
bump-my-version = { version = ">=0.30.0" }
doc8 = { version = ">=1.1.2" }
esbonio = { version = ">=0.16.5" }
flake8 = { version = ">=7.1.1" }
isort = { version = ">=6.0.0" }
pre-commit = { version = ">=4.1.0" }
pycln = { version = ">=2.5.0" }
pylint = { version = ">=3.3.4" }
pytest = { version = ">=8.3.4" }
pytest-env = { version = ">=1.1.5" }
flake8-pyproject = "^1.2.3"


[tool.poetry.group.docs.dependencies]
sphinx = { version = ">=8.1.3" }
sphinx_rtd_theme = { version = ">=3.0.2" }
sphinxemoji = { version = ">=0.3.1" }
sphinx-pyproject = "^0.3.0"
rstcheck = { extras = ["toml"], version = "^6.2.4" }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "dirhtml", "docs/source", "/_build"]
pythonCommand = ["/usr/bin/python3"]


[tool.pycln]
all = true


[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY"]
import_heading_stdlib = "Standard"
import_heading_thirdparty = "3rd party"
import_heading_firstparty = "Project-specific"
ensure_newline_before_comments = true
line_length = 79

[tool.flake8]
extend-ignore = "E501"


[tool.codespell]
write-changes = true
skip = "pyproject.toml,poetry.lock,.devcontainer/devcontainer.json"


[tool.pylint.MASTER]
source-roots = "src"


[tool.pylint."MESSAGES CONTROL"]
disable = ["C0301"]


[tool.pytest-env]
BYPASS_COMMAND_LINE = 1


[tool.sphinx-pyproject]
copyright = "2024, richard.parker@lifearc.org"
extensions = [
  "sphinxemoji.sphinxemoji",
  "sphinx.ext.autodoc",
  "sphinx.ext.napoleon",
  "sphinx.ext.githubpages",
  "sphinx.ext.todo",
]
templates_path = ["_templates"]
exclude_patterns = []
html_theme = "sphinx_rtd_theme"
html_static_path = ["_static"]
todo_include_todos = true
autodoc_mock_imports = []